Fixed form search submit on ios. Better styling in safari.

--- a/allmychanges/static/allmychanges/css/allmychanges.css
+++ b/allmychanges/static/allmychanges/css/allmychanges.css
@@ -406,9 +406,10 @@ select {
   border: 1px solid #808080;
   padding: 0 5px;
   width: 100%;
+  -webkit-appearance: none;
 }
 .magic-prompt__submit {
-  display: none;
+  visibility: hidden;
   font-size: 24px;
   line-height: 32px;
   position: absolute;
@@ -892,6 +893,7 @@ select {
   border: 1px solid #808080;
   padding: 0 5px;
   width: 100%;
+  -webkit-appearance: none;
 }
 .ios-promo__no-matches {
   padding: 10px;
