--- a/allmychanges/static/allmychanges/css/email.css
+++ b/allmychanges/static/allmychanges/css/email.css
@@ -530,9 +530,10 @@ a {
   border: 1px solid #808080;
   padding: 0 5px;
   width: 100%;
+  -webkit-appearance: none;
 }
 .magic-prompt__submit {
-  display: none;
+  visibility: hidden;
   font-size: 24px;
   line-height: 32px;
   position: absolute;
@@ -974,6 +975,7 @@ a {
   border: 1px solid #808080;
   padding: 0 5px;
   width: 100%;
+  -webkit-appearance: none;
 }
 .ios-promo__no-matches {
   padding: 10px;
