--- a/allmychanges/static/allmychanges/stylus/header.styl
+++ b/allmychanges/static/allmychanges/stylus/header.styl
@@ -103,9 +103,10 @@
         border: 1px solid gray;
         padding: 0 5px;
         width: 100%;
+        -webkit-appearance: none;
     }
     &__submit {
-        display: none;
+        visibility: hidden;
         font-size: 24px;
         line-height: 32px;
         position: absolute;
