--- a/allmychanges/static/allmychanges/stylus/pages/ios-promo.styl
+++ b/allmychanges/static/allmychanges/stylus/pages/ios-promo.styl
@@ -23,6 +23,7 @@
         border: 1px solid gray;
         padding: 0 5px;
         width: 100%;
+        -webkit-appearance: none;
     }
     &__no-matches {
         padding: 10px;
